# RichPanel

./: .codecov.yml  .coverage  .editorconfig  .gitattributes  .gitignore  .importlinter  09_SCHEMA.md  13_GOLDEN_LEGACY_OUTPUT.md  AGENT_B_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RUN_SUMMARY.md  WAVE01B_CHANGELOG.md  WAVE01_CHANGELOG.md  WAVE_F01C_CHANGELOG.md  WAVE_F02_CHANGELOG.md  WAVE_F03_CHANGELOG.md  WAVE_F04_CHANGELOG.md  WAVE_F05_CHANGELOG.md  WAVE_F06_CHANGELOG.md  WAVE_F07_CHANGELOG.md  WAVE_F08_CHANGELOG.md  WAVE_F09_CHANGELOG.md  WAVE_F10_CHANGELOG.md  WAVE_F11_CHANGELOG.md  WAVE_F12_CHANGELOG.md  b48_commit_history.txt  codecov.yml  commit_01_eval_harness.txt  commit_10_null_confidence.txt  ddb_expr_vals.json  ddb_key_conv.json  ddb_key_evt.json  ddb_scan_vals.json  ddb_src_names.json  ddb_src_vals.json  mypy.ini  pr131_complete_diff.txt  pr131_files_changed.txt  (+9 more)
.github/: README.md  pull_request_template.md
qa/: README.md
reference_artifacts/cursor_wave04_offline_eval_scaffold/: README.md  pyproject.toml
reference_artifacts/cursor_wave04_offline_eval_scaffold/artifacts/: confusion_matrix.csv  metrics.json  tier0_report.json  tier2_report.json
reference_artifacts/cursor_wave04_offline_eval_scaffold/data/: sample_labels.csv
reference_artifacts/cursor_wave04_offline_eval_scaffold/samples/: sample_messages.jsonl
reference_artifacts/cursor_wave04_offline_eval_scaffold/scripts/: run_classifier_samples.py  run_eval.py
reference_artifacts/cursor_wave04_offline_eval_scaffold/tests/: test_policy.py  test_redaction.py  test_schema_validation.py
(+2805 files in other folders)
