 [build-system]
 requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "mw-wave04"
 version = "0.1.0"
 description = "Wave 04 LLM routing scaffolding for Richpanel middleware"
 authors = [{ name = "Richpanel Wave04 Team" }]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "openai>=1.59.0",
     "jsonschema>=4.23.0",
     "pandas>=2.2.3",
     "numpy>=2.1.3",
 ]

 [project.optional-dependencies]
 dev = ["pytest>=8.3.3"]

 [tool.setuptools.packages.find]
 where = ["src"]
